[tool.poetry]
name = "pyapp-flow"
version = "0.1.0"
description = "Application workflow framework"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD 3-clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Cython = "^0.29.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
