[project]
name = "pyapp-flow"
description = "Application workflow framework"
license = "BSD-3-Clause"
keywords = ["framework", "application"]
version = "0.20"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Tim Savage", email = "tim@savage.company"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = '~=3.10'
dependencies = [
    'rich ~=14.0',
    'pyapp ~=4.10',
    'typing-extensions ~=4.0'
]

[project.urls]
repository = "https://github.com/pyapp-org/pyapp-flow"

[project.scripts]
flow = "pyapp_flow.cli:main"

[tool.poetry]
packages = [
    { include = "pyapp_flow", from = "src" },
    { include = "tests", format = "sdist" },
]
include = ["HISTORY"]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
pytest-cov = "^4.0"
Cython = "^0.29"
sphinx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
